feat: scope remaned to title in portfolio item database table
