# ulyanov-api/src/main/kotlin/my/artemyulyanov/api/database/PortfolioItemRepository.kt
@@ -17,7 +17,6 @@ import org.ktorm.support.postgresql.ilike
 interface PortfolioItemRepository : AbstractRepository<PortfolioItemEntity> {
     suspend fun findAll(): Result<List<PortfolioItemEntity>>
     suspend fun findById(id: Identifier): Result<PortfolioItemEntity>
-    suspend fun findByScope(scope: Identifier): Result<PortfolioItemEntity>
 
     suspend fun addPortfolioItem(item: PortfolioItemEntity): Result<PortfolioItemEntity>
 
@@ -37,13 +36,6 @@ class DefaultPortfolioItemRepository : PortfolioItemRepository, KoinComponent, D
         withIoCatching {
             database.portfolioItems.find {
                 it.id eq id
-            } ?: error("Portfolio item is not found")
-        }
-
-    override suspend fun findByScope(scope: Identifier): Result<PortfolioItemEntity> =
-        withIoCatching {
-            database.portfolioItems.find {
-                it.scope eq scope
             } ?: error("Portfolio item is not found")
         }
 
