# ulyanov-api/src/main/kotlin/my/artemyulyanov/api/services/PortfolioItemService.kt
@@ -15,7 +15,6 @@ import org.lighthousegames.logging.logging
 interface PortfolioItemService {
     suspend fun getAll(requireDto: Boolean = false): ResultingEntityWithOptionalDtoList<PortfolioItemEntity, PortfolioItem>
     suspend fun getById(id: Identifier, requireDto: Boolean = false): ResultingEntityWithOptionalDto<PortfolioItemEntity, PortfolioItem>
-    suspend fun getByScope(scope: Identifier, requireDto: Boolean = false): ResultingEntityWithOptionalDto<PortfolioItemEntity, PortfolioItem>
 
     suspend fun createPortfolioItem(item: PortfolioItemEntity, requireDto: Boolean = false): ResultingEntityWithOptionalDto<PortfolioItemEntity, PortfolioItem>
 
@@ -52,15 +51,6 @@ class DefaultPortfolioItemService : PortfolioItemService, KoinComponent {
             }
         }
 
-    override suspend fun getByScope(scope: Identifier, requireDto: Boolean): ResultingEntityWithOptionalDto<PortfolioItemEntity, PortfolioItem> =
-        runCatching {
-            val item = portfolioItemRepository.findByScope(scope).getOrThrow()
-
-            item to portfolioItemDtoConverter.convertToDtoIf(item) {
-                requireDto
-            }
-        }
-
     override suspend fun createPortfolioItem(
         item: PortfolioItemEntity,
         requireDto: Boolean
@@ -91,7 +81,6 @@ class DefaultPortfolioItemService : PortfolioItemService, KoinComponent {
             requireNotNull(originalPortfolioItemDto)
 
             originalPortfolioItem.apply {
-                scope = item.scope
                 description = item.description
                 text = item.text
                 startDate = item.startDate
